src/Zsharp/Parser/ZsharpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\marc\Documents\MyProjects\Zsharp\src\Zsharp\Zsharp.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Zsharp.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class ZsharpParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		U8=1, U16=2, U32=3, U64=4, I8=5, I16=6, I32=7, I64=8, F32=9, F64=10, STR=11, 
		BOOL=12, BIT=13, PTR=14, OPT=15, ERR=16, IMM=17, MODULE=18, IMPORT=19, 
		EXPORT=20, LOOP=21, BREAK=22, CONTINUE=23, IF=24, ELSE=25, RETURN=26, 
		IN=27, SELF=28, TRUE=29, FALSE=30, COMMENT=31, NUMBERbin=32, NUMBERoct=33, 
		NUMBERdec=34, NUMBERdec_prefix=35, NUMBERhex=36, CHARACTER=37, STRING=38, 
		AND=39, OR=40, NOT=41, UNUSED=42, PLUS=43, MINUS_NEG=44, MULT_PTR=45, 
		DIV=46, MOD=47, POW=48, EQ_ASSIGN=49, NEQ=50, GREAT_ANGLEclose=51, SMALL_ANGLEopen=52, 
		GREQ=53, SMEQ=54, BIT_AND=55, BIT_OR=56, BIT_XOR_IMM=57, BIT_NOT=58, BIT_SHL=59, 
		BIT_SHR=60, BIT_ROLL=61, BIT_ROLR=62, CONCAT=63, SUBopen=64, SUBclose=65, 
		PARENopen=66, PARENclose=67, QUESTION=68, COLON=69, DOT=70, RANGE=71, 
		SPREAD=72, COMMA=73, META=74, COMPTIME=75, ERROR=76, STR_QUOTE=77, CHAR_QUOTE=78, 
		COMMENTstart=79, IDENTIFIERupper=80, IDENTIFIERlower=81, SP=82, TAB=83, 
		INDENT=84, EOL=85;
	public const int
		RULE_file = 0, RULE_source = 1, RULE_codeblock = 2, RULE_module_statement = 3, 
		RULE_module_name = 4, RULE_statement_module = 5, RULE_statement_import = 6, 
		RULE_statement_export = 7, RULE_flow_statement = 8, RULE_statement_return = 9, 
		RULE_statement_if = 10, RULE_statement_else = 11, RULE_statement_elseif = 12, 
		RULE_statement_break = 13, RULE_statement_continue = 14, RULE_statement_loop = 15, 
		RULE_statement_loop_infinite = 16, RULE_statement_loop_while = 17, RULE_definition_top = 18, 
		RULE_definition = 19, RULE_expression_value = 20, RULE_comptime_expression_value = 21, 
		RULE_expression_arithmetic = 22, RULE_arithmetic_operand = 23, RULE_expression_logic = 24, 
		RULE_logic_operand = 25, RULE_expression_comparison = 26, RULE_comparison_operand = 27, 
		RULE_expression_bool = 28, RULE_function_def = 29, RULE_function_def_export = 30, 
		RULE_function_parameter_list = 31, RULE_function_parameter = 32, RULE_function_parameter_self = 33, 
		RULE_function_return_type = 34, RULE_function_call = 35, RULE_function_parameter_uselist = 36, 
		RULE_function_param_use = 37, RULE_variable_def_top = 38, RULE_variable_def = 39, 
		RULE_variable_def_typed = 40, RULE_variable_def_typed_init = 41, RULE_variable_assign_auto = 42, 
		RULE_variable_assign = 43, RULE_variable_ref = 44, RULE_struct_def = 45, 
		RULE_struct_field_def_list = 46, RULE_struct_field_def = 47, RULE_enum_def = 48, 
		RULE_enum_option_def_listline = 49, RULE_enum_option_def_list = 50, RULE_enum_option_def = 51, 
		RULE_enum_option_value = 52, RULE_enum_base_type = 53, RULE_type_def = 54, 
		RULE_type_alias = 55, RULE_type_ref_use = 56, RULE_type_ref = 57, RULE_type_name = 58, 
		RULE_known_types = 59, RULE_type_Bit = 60, RULE_type_Ptr = 61, RULE_type_Opt = 62, 
		RULE_type_Err = 63, RULE_type_Imm = 64, RULE_template_param_list = 65, 
		RULE_template_param_number = 66, RULE_template_param_type = 67, RULE_template_param_any = 68, 
		RULE_identifier_type = 69, RULE_identifier_var = 70, RULE_identifier_param = 71, 
		RULE_identifier_func = 72, RULE_identifier_field = 73, RULE_identifier_enumoption = 74, 
		RULE_identifier_module = 75, RULE_identifier_unused = 76, RULE_literal_bool = 77, 
		RULE_literal = 78, RULE_number = 79, RULE_number_bin = 80, RULE_number_oct = 81, 
		RULE_number_dec = 82, RULE_number_hex = 83, RULE_number_char = 84, RULE_operator_arithmetic = 85, 
		RULE_operator_arithmetic_unary = 86, RULE_operator_logic = 87, RULE_operator_logic_unary = 88, 
		RULE_operator_comparison = 89, RULE_operator_bits = 90, RULE_operator_bits_unary = 91, 
		RULE_operator_assignment = 92, RULE_empty_line = 93, RULE_newline = 94, 
		RULE_comment = 95, RULE_string = 96, RULE_character = 97, RULE_indent = 98;
	public static readonly string[] ruleNames = {
		"file", "source", "codeblock", "module_statement", "module_name", "statement_module", 
		"statement_import", "statement_export", "flow_statement", "statement_return", 
		"statement_if", "statement_else", "statement_elseif", "statement_break", 
		"statement_continue", "statement_loop", "statement_loop_infinite", "statement_loop_while", 
		"definition_top", "definition", "expression_value", "comptime_expression_value", 
		"expression_arithmetic", "arithmetic_operand", "expression_logic", "logic_operand", 
		"expression_comparison", "comparison_operand", "expression_bool", "function_def", 
		"function_def_export", "function_parameter_list", "function_parameter", 
		"function_parameter_self", "function_return_type", "function_call", "function_parameter_uselist", 
		"function_param_use", "variable_def_top", "variable_def", "variable_def_typed", 
		"variable_def_typed_init", "variable_assign_auto", "variable_assign", 
		"variable_ref", "struct_def", "struct_field_def_list", "struct_field_def", 
		"enum_def", "enum_option_def_listline", "enum_option_def_list", "enum_option_def", 
		"enum_option_value", "enum_base_type", "type_def", "type_alias", "type_ref_use", 
		"type_ref", "type_name", "known_types", "type_Bit", "type_Ptr", "type_Opt", 
		"type_Err", "type_Imm", "template_param_list", "template_param_number", 
		"template_param_type", "template_param_any", "identifier_type", "identifier_var", 
		"identifier_param", "identifier_func", "identifier_field", "identifier_enumoption", 
		"identifier_module", "identifier_unused", "literal_bool", "literal", "number", 
		"number_bin", "number_oct", "number_dec", "number_hex", "number_char", 
		"operator_arithmetic", "operator_arithmetic_unary", "operator_logic", 
		"operator_logic_unary", "operator_comparison", "operator_bits", "operator_bits_unary", 
		"operator_assignment", "empty_line", "newline", "comment", "string", "character", 
		"indent"
	};

	private static readonly string[] _LiteralNames = {
		null, "'U8'", "'U16'", "'U32'", "'U64'", "'I8'", "'I16'", "'I32'", "'I64'", 
		"'F32'", "'F64'", "'Str'", "'Bool'", "'Bit'", "'Ptr'", "'Opt'", "'Err'", 
		"'Imm'", "'module'", "'import'", "'export'", "'loop'", "'break'", "'continue'", 
		"'if'", "'else'", "'return'", "'in'", "'self'", "'true'", "'false'", null, 
		null, null, null, null, null, null, null, "'and'", "'or'", "'not'", "'_'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'='", "'<>'", "'>'", "'<'", 
		"'>='", "'<='", "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'|,'", "'>|'", 
		"'&&'", "'['", "']'", "'('", "')'", "'?'", "':'", "'.'", "'..'", "'...'", 
		"','", "'#'", "'#!'", "'!'", "'\"'", "'''", "'//'", null, null, "' '", 
		"'\t'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "U8", "U16", "U32", "U64", "I8", "I16", "I32", "I64", "F32", "F64", 
		"STR", "BOOL", "BIT", "PTR", "OPT", "ERR", "IMM", "MODULE", "IMPORT", 
		"EXPORT", "LOOP", "BREAK", "CONTINUE", "IF", "ELSE", "RETURN", "IN", "SELF", 
		"TRUE", "FALSE", "COMMENT", "NUMBERbin", "NUMBERoct", "NUMBERdec", "NUMBERdec_prefix", 
		"NUMBERhex", "CHARACTER", "STRING", "AND", "OR", "NOT", "UNUSED", "PLUS", 
		"MINUS_NEG", "MULT_PTR", "DIV", "MOD", "POW", "EQ_ASSIGN", "NEQ", "GREAT_ANGLEclose", 
		"SMALL_ANGLEopen", "GREQ", "SMEQ", "BIT_AND", "BIT_OR", "BIT_XOR_IMM", 
		"BIT_NOT", "BIT_SHL", "BIT_SHR", "BIT_ROLL", "BIT_ROLR", "CONCAT", "SUBopen", 
		"SUBclose", "PARENopen", "PARENclose", "QUESTION", "COLON", "DOT", "RANGE", 
		"SPREAD", "COMMA", "META", "COMPTIME", "ERROR", "STR_QUOTE", "CHAR_QUOTE", 
		"COMMENTstart", "IDENTIFIERupper", "IDENTIFIERlower", "SP", "TAB", "INDENT", 
		"EOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Zsharp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ZsharpParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ZsharpParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ZsharpParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(ZsharpParser.Eof, 0); }
		public SourceContext[] source() {
			return GetRuleContexts<SourceContext>();
		}
		public SourceContext source(int i) {
			return GetRuleContext<SourceContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 201;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MODULE) | (1L << IMPORT) | (1L << EXPORT) | (1L << COMMENT))) != 0) || ((((_la - 80)) & ~0x3f) == 0 && ((1L << (_la - 80)) & ((1L << (IDENTIFIERupper - 80)) | (1L << (IDENTIFIERlower - 80)) | (1L << (INDENT - 80)) | (1L << (EOL - 80)))) != 0)) {
				{
				{
				State = 198; source();
				}
				}
				State = 203;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 204; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SourceContext : ParserRuleContext {
		public Module_statementContext module_statement() {
			return GetRuleContext<Module_statementContext>(0);
		}
		public Definition_topContext definition_top() {
			return GetRuleContext<Definition_topContext>(0);
		}
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public Empty_lineContext empty_line() {
			return GetRuleContext<Empty_lineContext>(0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_source; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSource(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SourceContext source() {
		SourceContext _localctx = new SourceContext(Context, State);
		EnterRule(_localctx, 2, RULE_source);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 210;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 206; module_statement();
				}
				break;
			case 2:
				{
				State = 207; definition_top();
				}
				break;
			case 3:
				{
				State = 208; comment();
				}
				break;
			case 4:
				{
				State = 209; empty_line();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeblockContext : ParserRuleContext {
		public Flow_statementContext[] flow_statement() {
			return GetRuleContexts<Flow_statementContext>();
		}
		public Flow_statementContext flow_statement(int i) {
			return GetRuleContext<Flow_statementContext>(i);
		}
		public Variable_assignContext[] variable_assign() {
			return GetRuleContexts<Variable_assignContext>();
		}
		public Variable_assignContext variable_assign(int i) {
			return GetRuleContext<Variable_assignContext>(i);
		}
		public Function_callContext[] function_call() {
			return GetRuleContexts<Function_callContext>();
		}
		public Function_callContext function_call(int i) {
			return GetRuleContext<Function_callContext>(i);
		}
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		public Empty_lineContext[] empty_line() {
			return GetRuleContexts<Empty_lineContext>();
		}
		public Empty_lineContext empty_line(int i) {
			return GetRuleContext<Empty_lineContext>(i);
		}
		public CodeblockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codeblock; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodeblock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeblockContext codeblock() {
		CodeblockContext _localctx = new CodeblockContext(Context, State);
		EnterRule(_localctx, 4, RULE_codeblock);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 218;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 218;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						State = 212; flow_statement();
						}
						break;
					case 2:
						{
						State = 213; variable_assign();
						}
						break;
					case 3:
						{
						State = 214; function_call();
						}
						break;
					case 4:
						{
						State = 215; definition();
						}
						break;
					case 5:
						{
						State = 216; comment();
						}
						break;
					case 6:
						{
						State = 217; empty_line();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 220;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_statementContext : ParserRuleContext {
		public Statement_moduleContext statement_module() {
			return GetRuleContext<Statement_moduleContext>(0);
		}
		public Statement_importContext statement_import() {
			return GetRuleContext<Statement_importContext>(0);
		}
		public Statement_exportContext statement_export() {
			return GetRuleContext<Statement_exportContext>(0);
		}
		public Module_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Module_statementContext module_statement() {
		Module_statementContext _localctx = new Module_statementContext(Context, State);
		EnterRule(_localctx, 6, RULE_module_statement);
		try {
			State = 225;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MODULE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 222; statement_module();
				}
				break;
			case IMPORT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 223; statement_import();
				}
				break;
			case EXPORT:
				EnterOuterAlt(_localctx, 3);
				{
				State = 224; statement_export();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_nameContext : ParserRuleContext {
		public Identifier_moduleContext identifier_module() {
			return GetRuleContext<Identifier_moduleContext>(0);
		}
		public Module_nameContext module_name() {
			return GetRuleContext<Module_nameContext>(0);
		}
		public ITerminalNode DOT() { return GetToken(ZsharpParser.DOT, 0); }
		public Module_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_name; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Module_nameContext module_name() {
		return module_name(0);
	}

	private Module_nameContext module_name(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Module_nameContext _localctx = new Module_nameContext(Context, _parentState);
		Module_nameContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_module_name, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 228; identifier_module();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 235;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Module_nameContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_module_name);
					State = 230;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 231; Match(DOT);
					State = 232; identifier_module();
					}
					} 
				}
				State = 237;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Statement_moduleContext : ParserRuleContext {
		public ITerminalNode MODULE() { return GetToken(ZsharpParser.MODULE, 0); }
		public ITerminalNode SP() { return GetToken(ZsharpParser.SP, 0); }
		public Module_nameContext module_name() {
			return GetRuleContext<Module_nameContext>(0);
		}
		public NewlineContext newline() {
			return GetRuleContext<NewlineContext>(0);
		}
		public Statement_moduleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_module; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_module(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_moduleContext statement_module() {
		Statement_moduleContext _localctx = new Statement_moduleContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement_module);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 238; Match(MODULE);
			State = 239; Match(SP);
			State = 240; module_name(0);
			State = 241; newline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_importContext : ParserRuleContext {
		public ITerminalNode IMPORT() { return GetToken(ZsharpParser.IMPORT, 0); }
		public ITerminalNode SP() { return GetToken(ZsharpParser.SP, 0); }
		public Module_nameContext module_name() {
			return GetRuleContext<Module_nameContext>(0);
		}
		public NewlineContext newline() {
			return GetRuleContext<NewlineContext>(0);
		}
		public Statement_importContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_import; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZsharpVisitor<TResult> typedVisitor = visitor as IZsharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_import(this);
			else return visitor.VisitChildren(this);
		}
	}
